2009-01-16 09:24  rsbivand

	* DESCRIPTION, NAMESPACE, R/project.R, man/projInfo.Rd,
	  man/spTransform-methods.Rd, src/projectit.cpp: added NAD examples
	  and test

2009-01-15 21:24  rsbivand

	* src/RGDAL.def, ChangeLog, inst/ChangeLog: changed to use platform
	  shared files

2009-01-15 21:20  rsbivand

	* configure.win, R/gdal.R: Windows adjustment for CRAN build

2009-01-15 21:07  rsbivand

	* ChangeLog, inst/ChangeLog: changed to use platform shared files

2009-01-15 21:04  rsbivand

	* DESCRIPTION, NAMESPACE, R/AAA.R, R/gdal.R, R/project.R,
	  man/GDALDriver-class.Rd, man/projInfo.Rd, src/gdal-bindings.cpp,
	  src/projectit.cpp: changed to use platform shared files

2009-01-14 12:33  rsbivand

	* inst/pictures/big_int_arc_file.asc, man/readGDAL.Rd: big_int
	  issue for AAIGRID

2009-01-14 12:32  rsbivand

	* DESCRIPTION, configure.win, R/ogr_write.R: 1.6.0 KML fix

2009-01-11 21:54  rsbivand

	* DESCRIPTION, configure.win, ChangeLog, inst/ChangeLog: add
	  R_PACKAGE_DIR in configure.win

2008-12-15 10:36  rsbivand

	* DESCRIPTION, inst/README, ChangeLog, inst/ChangeLog: testing for
	  1.6

2008-12-15 10:04  rsbivand

	* DESCRIPTION, inst/vectors/cities.prj: testing for 1.6

2008-12-13 12:30  rsbivand

	* DESCRIPTION, NAMESPACE, R/gdal.R, man/GDALMajorObject-class.Rd,
	  man/GDALReadOnlyDataset-class.Rd, src/gdal-bindings.cpp,
	  ChangeLog, inst/ChangeLog: metadata problems

2008-12-11 21:08  rsbivand

	* man/GDALMajorObject-class.Rd: metadata problems

2008-12-11 21:04  rsbivand

	* DESCRIPTION, man/GDALMajorObject-class.Rd: metadata problems

2008-11-22 01:01  rsbivand

	* DESCRIPTION, R/sp_gdal.R: fix GDALinfo origin bug

2008-11-06 09:09  rsbivand

	* R/sp_gdal.R: tidy in create2GDAL

2008-10-30 20:59  rsbivand

	* ChangeLog, R/gdal.R, inst/ChangeLog, src/Makevars.win: no DEBUG
	  in Windows

2008-10-30 15:21  edzer

	* NAMESPACE: removed exportClass(CRS), as sp does this already.

2008-10-30 12:52  rsbivand

	* ChangeLog, inst/ChangeLog: changelog
